# taskfile-parser

./: README.md  pyproject.toml
.github/: release.yml
.github/workflows/: lint.yml  test.yml
src/taskfile_parser/: __init__.py  cli.py
src/taskfile_parser/domain/: __init__.py  taskfile.py
src/taskfile_parser/repository/: __init__.py  repository.py
tests/domain/: test_taskfile.py
tests/repository/: __init__.py  test_repository.py
